force-app/main/default/objects/SpreadSheet__c/SpreadSheet__c.object-meta.xml
<CustomObject>
    <label>SpreadSheet</label>
    <nameField>
        <label>SpreadSheet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SpreadSheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>