force-app/main/default/objects/SpreadSheet__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SpreadSheets</relationshipLabel>
    <relationshipName>SpreadSheets</relationshipName>
    <type>Lookup</type>
</CustomField>