force-app/main/default/objects/SpreadSheet__c/fields/SpreadSheet_Id__c.field-meta.xml
<CustomField>
    <fullName>SpreadSheet_Id__c</fullName>
    <externalId>true</externalId>
    <label>SpreadSheet Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>