force-app/main/default/objects/SpreadSheet__c/fields/spreadsheetUrl__c.field-meta.xml
<CustomField>
    <fullName>spreadsheetUrl__c</fullName>
    <label>spreadsheetUrl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>